# Starship-Chess

./: .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  osgwidget.cpp  osgwidget.h  planetmenu.cpp  planetmenu.h  planetmenu.ui  shipupdatecallback.cpp  shipupdatecallback.h  sphereupdatecallback.cpp  sphereupdatecallback.h  stellarbody.cpp  stellarbody.h  teamonemenu.cpp  teamonemenu.h  teamonemenu.ui  teamtwomenu.cpp  teamtwomenu.h  teamtwomenu.ui
icons/: icons.qrc
